--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -5,9 +5,12 @@
 
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
 }
 
 .content {
   flex-grow: 1;
+}
+
+.footer {
+  min-height: 25vh;
 }
