--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -21,7 +21,7 @@
   @media (min-width: 45rem) {
     font-size: 1.9rem;
   }
-  margin-right: 1.3rem;
+  margin: 0.5rem;
   text-decoration: none;
 }
 
