--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,18 +1,27 @@
 .header {
-  padding: 1rem 0 3rem;
+  padding: 0 0 3rem 0;
   img{ 
     margin-bottom: -4rem;
     @media (min-width: 45rem) {
-      width: 18rem;
+      width: 14rem;
       margin-bottom: -3rem;
     }
   }
 }
 
+.nav-menu, .nav-logo {
+  display: flex;
+  justify-content: space-around;
+}
+
 .nav-list {
+  display: none;
+  
+  @media (min-width: 45rem) {
   display: flex;
   list-style-type: none;
   margin: 0;
+  }
 }
 
 .nav-item {
@@ -33,7 +42,7 @@
   color: #333333
 }
 
-.nav-menu, .nav-logo {
-  display: flex;
-  justify-content: space-around;
+
+.nav-log {
+  margin-top: -3rem;
 }
