--- a/src/components/sidebar.scss
+++ b/src/components/sidebar.scss
@@ -9,7 +9,7 @@
 
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
-  background: #373a47;
+  background: #373a4721;
 }
 
 /* Color/shape of burger icon bars on hover*/
