--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -199,6 +199,7 @@ html {
   box-sizing: inherit;
 }
 body {
+  background: #e9e9e9;
   color: hsla(0, 0%, 0%, 0.8);
   font-family: sans-serif;
   font-weight: normal;
