--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -27,6 +27,12 @@
     font-size: .8rem;
     font-style: italic;
   }
+  .post-data-container{
+    display: flex;
+  }
+  .dati-post{
+    margin-left: 1em;
+  }
 }
 
 .numberPostShown {
