--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,10 +1,8 @@
 .header {
   padding: 0 0 3rem 0;
   img{ 
-    margin-bottom: -4rem;
     @media (min-width: 45rem) {
       width: 14rem;
-      margin-bottom: -3rem;
     }
   }
 }
@@ -13,6 +11,31 @@
   display: flex;
   justify-content: space-around;
 }
+
+.nav-menu{
+  border-bottom: 1px solid black;
+  margin-top: -2.5em;
+  position: relative;
+  background: white;
+
+  $border: 5px;
+  background: #e9e9e9;;
+  background-clip: padding-box; /* !importanté */
+  border: solid $border transparent; /* !importanté */
+  border-radius: 1em;
+
+  &::before{
+    content: '';
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 0;
+    z-index: -1;
+    margin-bottom: -$border; /* !importanté */
+    border-radius: inherit; /* !importanté */
+    background: linear-gradient(to right, #e9e9e9, #3d3d3d, #e9e9e9);
+  }
+
+}
+
 
 .nav-list {
   display: none;
