--- a/src/pages/events.scss
+++ b/src/pages/events.scss
@@ -12,7 +12,9 @@
 
 .events-container, .react-calendar{
   margin: 0 1rem;
+  flex-grow: 1;
 }
+
 
 .react-calendar{
   background:white;
@@ -22,7 +24,7 @@
   @media (min-width: 45rem) {
     background:white;
     height: fit-content;
-    width: 50%;
+    max-width: 50%;
     padding: 1px;
     border: 1px solid rgb(170, 163, 163);
   }
@@ -30,6 +32,9 @@
 
 .react-calendar__navigation{
   padding: 0.3rem 0 1.5rem 0;
+  button:hover{
+    background: #eee9e9;
+  }
 }
 
 .react-calendar__month-view__days{
@@ -38,7 +43,11 @@
 
 
 .day-event{
-  border: 1px solid rgb(201, 61, 177);
+  
+  abbr {
+    border-bottom: 2px solid black;
+    
+  }
 }
 
 abbr, abbr[title] {
@@ -93,4 +102,12 @@ button{
 
 .react-calendar__month-view__days__day--neighboringMonth{
   color: rgb(187, 184, 184);
+}
+
+#goToDate {
+   font-weight: 600;
+   border-bottom: 1px solid black;
+   &:hover{
+     color: #653fcf;
+   }
 }
