add logic to filter blog post by button click plus logic for open the blog with link aledy filtered

--- a/src/modules/parallax.module.scss
+++ b/src/modules/parallax.module.scss
@@ -11,6 +11,6 @@
   background-repeat: no-repeat;
   background-size: cover;
   @media (min-width: 45rem) {
-    background-position: top;
+    background-position: 0 3%;
   }
 }
