--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -5,12 +5,14 @@
 
   display: flex;
   flex-direction: column;
+
+  .footer {
+    margin-top:3rem;
+    min-height: 25vh;
+  }
 }
 
 .content {
   flex-grow: 1;
 }
 
-.footer {
-  min-height: 25vh;
-}
