--- a/src/modules/filterInput.scss
+++ b/src/modules/filterInput.scss
@@ -1,12 +1,13 @@
 .filter{
   .button-container{
-    margin: 1rem 0;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     text-align: center;
   }
   button{
     border: 1px solid black;
     border-radius: 10px;
-    margin: 0 1px;
+    margin: 2px;
   }
   button:hover{
     background: rgb(170, 170, 170);
@@ -16,16 +17,4 @@
   }
 }
 
-$columns: 12;
-
-@for $i from 1 through $columns{
-  .col-#{$i}{
-    flex: 0 0 100% / $columns * $i
-  }
-    
-  .col-offset-#{$i}{
-    margin-left: 100% / $columns * $i
-  }
-    
-}
 
