--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,11 +1,8 @@
 .container {
-  margin: 0 auto;
-  max-width: 950px;
-  padding: 0 1rem 1rem 1rem;
-
+  margin: 0 15%;
   display: flex;
   flex-direction: column;
-
+  
   .footer {
     margin-top:3rem;
     min-height: 25vh;
