--- a/src/components/sidebar.scss
+++ b/src/components/sidebar.scss
@@ -1,9 +1,14 @@
+.fadeOut{
+  display: none;
+}
+
+
 /* Position and sizing of burger button */
 .bm-burger-button {
   position: fixed;
   width: 36px;
   height: 30px;
-  left: 36px;
+  right: 36px;
   top: 36px;
 }
 
