refactoring style with bootstrap. header, navmenu, sidbar, blogprewiev card

--- a/src/components/blogPreview.scss
+++ b/src/components/blogPreview.scss
@@ -60,5 +60,14 @@ $himera-yellow: #ffc600;
   align-items: center; 
 }
 
+.card:hover{
+  border: 1px solid black;
+  box-shadow: 5px 10px #888888
+}
+
+
+
+
+
 
   
