still refactoring scss

--- a/src/components/jardinu.scss
+++ b/src/components/jardinu.scss
@@ -1,5 +1,5 @@
 
-.wrapper {
+#jardinu-section {
   background-image: url('../images/jardinu/foliage-bg.jpg');
   background-position: center center;
   background-repeat: repeat;
