--- a/src/modules/filterInput.scss
+++ b/src/modules/filterInput.scss
@@ -1,20 +1,10 @@
-.filter{
-  .button-container{
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-  button{
-    border: 1px solid black;
-    border-radius: 10px;
-    margin: 2px;
-  }
-  button:hover{
-    background: rgb(170, 170, 170);
-  }
-  button:active{
-    background: rgb(102, 102, 102);
-  }
+.blog-header{
+  border: 1px solid rgb(41, 17, 255);
+  background-color: rgba(235, 231, 227, 0.85);
+  box-shadow: 10px 10px 10px;
+}
+.input-spread{
+  width: 100%;
 }
 
 
