--- a/src/pages/blog.scss
+++ b/src/pages/blog.scss
@@ -1,40 +1,11 @@
-$himera-yellow: #ffc600;
 
-.posts {
-  list-style-type: none;
-  margin: 0;
+
+.wrapper-bg {
+  background-image: url('../images/blog/tile-bg.jpg');
+  background-position: center center;
+  background-repeat: repeat;
+  background-size: 15em;
 }
 
-.B-post {
-  border: 2px solid $himera-yellow;
-  margin: 1rem 0;
-  a{
-    background: #f4f4f4;
-    color: #000000;
-    display:block;
-    padding: 1rem;
-    text-decoration: none;
-  }
 
-  a:hover {
-    background: #e4e4e4;
-  }
-
-  h2 {
-    margin-bottom: 0;
-  }
-
-  p{
-    margin-top: .5rem;
-    color: #777777;
-    font-size: .8rem;
-    font-style: italic;
-  }
-  .post-data-container{
-    display: flex;
-  }
-  .dati-post{
-    margin-left: 1em;
-  }
-}
 
