--- a/src/components/jardinu.scss
+++ b/src/components/jardinu.scss
@@ -4,6 +4,8 @@
   background-position: center center;
   background-repeat: repeat;
   background-size: 15em;
+  padding: 3rem 0;
+  margin-top: -69px;
 }
 
 .text-bg{
