--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -2,8 +2,13 @@
   text-align: center;
 }
 
+.nav-link a {
+  font-size: 1.2rem;
+  text-decoration: none;
+}
+
 #logo_img{
-  width: 50%;
+  width: 100%;
 }
 
 .container-fluid .navbar-brand{
