--- a/src/components/heroImageB.module.scss
+++ b/src/components/heroImageB.module.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@900&display=swap');
 
 .header {
-  height: 200vh;
+  height: 190vh;
 }
 
 .container {
@@ -116,12 +116,12 @@
   color: white;
 }
 
-section {
-  min-height: 100vh;
-  padding: 2em;
-  margin: auto;
-  max-width: 800px;
-}
+// section {
+//   min-height: 100vh;
+//   padding: 2em;
+//   margin: auto;
+//   max-width: 800px;
+// }
 
 section h2 {
   font-family: 'Fraunces', serif;
